--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ python-dotenv
 pypinyin==0.50.0
 cn2an==0.5.22
 jieba==0.42.1
-gradio==3.48.0
+gradio
 langid==1.1.6
 tiktoken==0.4.0
 transformers==4.36.0
